@@ -11,7 +11,7 @@ require_once('www/include/project_summary.php');
 if (!$project->isProject()) {
 	header ("Location: /foundry/". $project->getUnixName() ."/");
 	exit;
-}	   
+}
 
 // Icons theming
 $imgproj=$HTML->imgproj;
@@ -29,14 +29,14 @@ site_project_header(array('title'=>$title,'group'=>$group_id,'toptab'=>'home','p
 <table width="100%" border="0">
 	<tr>
 		<td width="99%" valign="top">
-		<?php 
+		<?php
 
-// ########################################## top area, not in box 
+// ########################################## top area, not in box
 $res_admin = db_query("
-	SELECT users.user_id AS user_id,users.user_name AS user_name 
-	FROM users,user_group 
-	WHERE user_group.user_id=users.user_id 
-	AND user_group.group_id=$group_id 
+	SELECT users.user_id AS user_id,users.user_name AS user_name
+	FROM users,user_group
+	WHERE user_group.user_id=users.user_id
+	AND user_group.group_id=$group_id
 	AND user_group.admin_flags = 'A'
 	AND users.status='A'
 ");
@@ -54,7 +54,7 @@ if ($project->getDescription()) {
 }
 
 // trove info
-print '<br />&nbsp;<br />';
+print "<br />\n";
 print trove_getcatlisting($group_id,0,1);
 
 // registration date
@@ -128,7 +128,7 @@ print db_numrows($res_count);
 ?>
 
 <a href="/project/memberlist.php?group_id=<?php print $group_id; ?>">[View Members]</a>
-<?php 
+<?php
 
 echo $HTML->boxBottom();
 
@@ -143,13 +143,13 @@ echo $HTML->boxBottom();
 
 // CB hide FRS if desired
 if ($project->usesFRS()) {
-	echo $HTML->boxTop($Language->getText('frs','latest_file_releases')); 
+	echo $HTML->boxTop($Language->getText('frs','latest_file_releases'));
 	$unix_group_name = $project->getUnixName();
 
 	echo '
 	<table cellspacing="1" cellpadding="5" width="100%" border="0">
 		<tr style="background-color:'.$HTML->COLOR_LTBACK1.'">
-		<td align="left"">
+		<td align="left">
 			'.$Language->getText('frs','file_package').'
 		</td>
 		<td align="center">
@@ -218,7 +218,7 @@ if ($project->usesFRS()) {
 }
 
 ?>
-<p>
+<p />
 <table width="100%" border="0" cellpadding="0" cellspacing="0">
 	<tr>
 		<td valign="top">
@@ -226,7 +226,7 @@ if ($project->usesFRS()) {
 <?php
 
 // ############################## PUBLIC AREAS
-echo $HTML->boxTop($Language->getText('group','public_area')); 
+echo $HTML->boxTop($Language->getText('group','public_area'));
 
 // ################# Homepage Link
 
@@ -238,15 +238,15 @@ print '&nbsp;'.$Language->getText('group','long_homepage').'</a>';
 
 // CB hide tracker if desired
 if ($project->usesTracker()) {
-	print '<HR SIZE="1" NoShade><a href="/tracker/?group_id='.$group_id.'">';
+	print '<hr size="1" noshade="noshade" /><a href="/tracker/?group_id='.$group_id.'">';
 	print html_image('ic/tracker20g.png','20','20',array('alt'=>$Language->getText('group','short_tracker')));
 	print $Language->getText('group', 'short_tracker').'</a>';
 
 	$result=db_query("SELECT agl.*,aca.count,aca.open_count
 	FROM artifact_group_list agl
-	LEFT JOIN artifact_counts_agg aca USING (group_artifact_id) 
+	LEFT JOIN artifact_counts_agg aca USING (group_artifact_id)
 	WHERE agl.group_id='$group_id'
-	AND agl.is_public=1 
+	AND agl.is_public=1
 	ORDER BY group_artifact_id ASC");
 
 	$rows = db_numrows($result);
@@ -255,7 +255,7 @@ if ($project->usesTracker()) {
 		echo '<br /><em>There are no public trackers available</em>';
 	} else {
 		for ($j = 0; $j < $rows; $j++) {
-			echo '<p>
+			echo '<p />
 		&nbsp;-&nbsp;<a href="/tracker/?atid='. db_result($result, $j, 'group_artifact_id') .
 		'&amp;group_id='.$group_id.'&amp;func=browse">'. db_result($result, $j, 'name') .'</a>
 		( <strong>'. db_result($result, $j, 'open_count') .' open / '. db_result($result, $j, 'count') .' total</strong> )<br />'.
@@ -267,8 +267,8 @@ if ($project->usesTracker()) {
 // ################## forums
 
 if ($project->usesForum()) {
-	print '<HR SIZE="1" NoShade><a href="/forum/?group_id='.$group_id.'">';
-	print html_image('ic/forum20g.png','20','20',array('alt'=>$Language->getText('group','short_forum'))); 
+	print '<hr size="1" noshade="noshade" /><a href="/forum/?group_id='.$group_id.'">';
+	print html_image('ic/forum20g.png','20','20',array('alt'=>$Language->getText('group','short_forum')));
 	print '&nbsp;'.$Language->getText('group','long_forum').'</a>';
 	print " ( <strong>". project_get_public_forum_message_count($group_id) ."</strong> messages in ";
 
@@ -279,7 +279,7 @@ if ($project->usesForum()) {
 
 if ($project->usesDocman()) {
 	print '
-	<HR SIZE="1" NoShade>
+	<hr size="1" noshade="noshade" />
 	<a href="/docman/?group_id='.$group_id.'">';
 	print html_image('ic/docman16b.png','20','20',array('alt'=>$Language->getText('group','short_docman')));
 	print '&nbsp;'.$Language->getText('group','long_docman').'</a>';
@@ -288,16 +288,16 @@ if ($project->usesDocman()) {
 // ##################### Mailing lists
 
 if ($project->usesMail()) {
-	print '<HR SIZE="1" NoShade><a href="/mail/?group_id='.$group_id.'">';
-	print html_image('ic/mail16b.png','20','20',array('alt'=>$Language->getText('group','short_mail'))); 
+	print '<hr size="1" noshade="noshade" /><a href="/mail/?group_id='.$group_id.'">';
+	print html_image('ic/mail16b.png','20','20',array('alt'=>$Language->getText('group','short_mail')));
 	print '&nbsp;'.$Language->getText('group','long_mail').'</a>';
 	print " ( <strong>". project_get_mail_list_count($group_id) ."</strong> public mailing lists )";
 }
 
-// ##################### Task Manager 
+// ##################### Task Manager
 
 if ($project->usesPm()) {
-	print '<HR SIZE="1" NoShade><a href="/pm/?group_id='.$group_id.'">';
+	print '<hr size="1" noshade="noshade" /><a href="/pm/?group_id='.$group_id.'">';
 	print html_image('ic/taskman20g.png','20','20',array('alt'=>$Language->getText('group','short_pm')));
 	print '&nbsp;'.$Language->getText('group','long_pm').'</a>';
 	$sql="SELECT * FROM project_group_list WHERE group_id='$group_id' AND is_public=1";
@@ -309,25 +309,25 @@ if ($project->usesPm()) {
 		for ($j = 0; $j < $rows; $j++) {
 			echo '
 			<br /> &nbsp; - <a href="/pm/task.php?group_project_id='.db_result($result, $j, 'group_project_id').
-			'&group_id='.$group_id.'&func=browse">'.db_result($result, $j, 'project_name').'</a>';
+			'&amp;group_id='.$group_id.'&amp;func=browse">'.db_result($result, $j, 'project_name').'</a>';
 		}
 
 	}
 }
 
-// ######################### Surveys 
+// ######################### Surveys
 
 if ($project->usesSurvey()) {
-	print '<HR SIZE="1" NoShade><a href="/survey/?group_id='.$group_id.'">';
+	print '<hr size="1" noshade="noshade" /><a href="/survey/?group_id='.$group_id.'">';
 	print html_image('ic/survey16b.png','20','20',array('alt'=>$Language->getText('group','short_survey')));
 	print " ".$Language->getText('group','long_survey')."</a>";
 	echo ' ( <strong>'. project_get_survey_count($group_id) .'</strong> surveys )';
 }
 
-// ######################### CVS 
+// ######################### CVS
 
 if ($project->usesCVS()) {
-	print '<HR SIZE="1" NoShade><a href="/scm/?group_id='.$group_id.'">';
+	print '<hr size="1" noshade="noshade" /><a href="/scm/?group_id='.$group_id.'">';
 	print html_image('ic/cvs16b.png','20','20',array('alt'=>$Language->getText('group','short_cvs')));
 	print " ".$Language->getText('group','long_cvs')."</a>";
 
@@ -346,19 +346,19 @@ if ($project->usesCVS()) {
 	}
 	echo ' ( <strong>' . number_format($cvs_commit_num, 0) . '</strong> commits, <strong>' . number_format($cvs_add_num, 0) . '</strong> adds )';
 	if ($cvs_commit_num || $cvs_add_num) {
-		echo '<br /> &nbsp; - 
+		echo '<br /> &nbsp; -
 			<a href="'.account_group_cvsweb_url($project->getUnixName()).'">
 			Browse CVS</a>';
 	}
 
 }
 
-// ######################## AnonFTP 
+// ######################## AnonFTP
 
 // CB hide FTP if desired
 if ($project->usesFTP()) {
 	if ($project->isActive()) {
-		print '<hr size="1" noshade="noshade />';
+		print '<hr size="1" noshade="noshade" />';
 		print "<a href=\"ftp://" . $project->getUnixName() . "." . $GLOBALS['sys_default_domain'] . "/pub/". $project->getUnixName() ."/\">";
 		print html_image('ic/ftp16b.png','20','20',array('alt'=>$Language->getText('group','long_ftp')));
 		print $Language->getText('group','long_ftp')."</a>";
